--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@google/maps": "^0.3.1",
     "angular": "^1.6.1",
     "express": "^4.14.0",
     "sequelize": "^3.30.0"
