--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@google/maps": "^0.3.1",
     "angular": "^1.6.1",
     "express": "^4.14.0",
+    "mysql2": "^1.1.2",
     "sequelize": "^3.30.0"
   },
   "devDependencies": {},
