--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@google/maps": "^0.3.1",
     "angular": "^1.6.1",
+    "angular-route": "^1.6.1",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "mysql": "^2.13.0",
